# Task_Aware-Adaptation-and-Test_Time-Scaling-for-Text_Rich-Multimodal-Reasoning

./: .gitignore  README.md  docx_text.txt  environment.cpu.yml  environment.yml  environment_npu.yml  pyproject.toml  qwen_vl_text_rich_adapter.md  requirements.txt  setup.py
configs/data/: chartqa.yaml  docvqa.yaml  mmmu.yaml  scienceqa.yaml
configs/eval/: eval_chartqa.yaml  eval_docvqa.yaml  eval_mmmu.yaml  eval_scienceqa.yaml
docs/: proposal.txt  text_rich_mllm_project_proposal.docx
scripts/: analyze_errors.py  build_unified_data.py  check_npu_runtime.py  check_runtime.py  download_data.py  download_mmmu_and_model.sh  evaluate_model.py  export_tables_figures.py  generate_report_figures.py  inference_best_of_n.py  pipeline_env_data_disk.sh  pipeline_stage_01_build_datasets.sh  pipeline_stage_01_build_datasets_chart15k_doc10k.sh  pipeline_stage_02_prompt_sanity.sh  pipeline_stage_03_baseline_eval.sh  pipeline_stage_04_training.sh  pipeline_stage_05_checkpoint_validation.sh  pipeline_stage_06_select_best_export.sh  pipeline_stage_07_external_evaluation.sh  pipeline_stage_08_dora_training.sh  pipeline_stage_09_tra_training.sh  pipeline_stage_10_grpo.sh  pipeline_stage_11_bon_eval.sh  plot_bon_curve.py  preprocess_chartqa.py  preprocess_docvqa.py  preprocess_mmmu.py  preprocess_scienceqa.py  run_inference.py  run_structured_prompt.py  run_zero_shot.py  select_best_checkpoint.py  train_grpo.py  train_peft.py  validate_checkpoint.py
tests/: test_dataset_adapters.py  test_loss_masking.py  test_mixing.py  test_normalization.py  test_prompt_builder.py  test_slicing.py
(+122 files in other folders)
