[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text-rich-mllm"
version = "0.1.0"
description = "Unified text-rich multimodal reasoning scaffold for documents, charts, and scientific figures."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "accelerate>=0.33.0",
  "datasets>=2.20.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "peft>=0.11.0",
  "Pillow>=10.4.0",
  "PyYAML>=6.0.1",
  "torch>=2.3.0",
  "transformers>=4.44.0",
  "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
